--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <main>
         <div class="container">
             <div class="row">
-                <form class="col s12" action="" onsubmit="submitForm()">
+                <form class="col s12" action="" onsubmit="submitForm(); return false;">
                     <div class="row">
                         <div class="input-field col s6">
                             <input autocomplete="off" type="text" class="datepicker" id="pay-period-start">
